--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
   <link rel="stylesheet" href="css/galeria.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/carrito.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8606342840428640"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8606342840428640"
+    crossorigin="anonymous"></script>
   <script src="js/carrito.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-0BTQQE7J80');
-</script>
+    gtag('config', 'G-0BTQQE7J80');
+  </script>
   <title>PcAczezorios</title>
 </head>
 
 <body>
   <header>
     <div>
-      	<img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'"
-        alt="PcAczezorios" title="PcAczezorios">
-      	<nav>
-			<ul>
-			<li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
-			<li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
-			<li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
-			</ul>
-		</nav>
-      	<input type="search" placeholder="Búsqueda">
-	  	<a href="#carrito-enlace" class="carrito-a"><i class="bi bi-cart-fill"></i>Carrito</a>
+      <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'" alt="PcAczezorios"
+        title="PcAczezorios">
+      <nav>
+        <ul>
+          <li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
+          <li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
+          <li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
+        </ul>
+      </nav>
+      <input type="search" placeholder="Búsqueda">
+      <a href="#carrito-enlace" class="carrito-a"><i class="bi bi-cart-fill"></i>Carrito</a>
     </div>
     <!-- Login -->
     <div id="div_login">
@@ -76,146 +76,157 @@
   </header>
   <main>
     <section id="productos-destacados">
-		<h2>Productos destacados</h2>
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner">
-			<div class="carousel-item active">
-			  	<a href="">
-				  <img class="d-block w-100" id="msi" src="img/productos/MSI-3090.jpg" alt="Gráfica 3090">
-				</a>
-			</div>
-			<div class="carousel-item">
-			  	<a href="">
-				  <img class="d-block w-100" id="amd" src="img/productos/AMD-Ryzen-5900X.jpg" alt="Second slide">
-				</a>
-			</div>
-			<div class="carousel-item">
-			  	<a href="">
-				  <img class="d-block w-100" id="ps5" src="img/productos/PS5.webp" alt="Third slide">
-				</a>
-			</div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-			<i class="bi bi-caret-left-fill"></i>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-			<i class="bi bi-caret-right-fill"></i>
-		  </a>
-		</div>
-	</section>
-	<section id="productos">
-		<h2>Nuestro catálogo</h2>
-		<div class="galeria-productos">
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090" class="imagen-articulo"></div>
-				<span class="nombre-producto">MSI GeForce RTX 3090 Ventus 3X</span>
-				<div class="precio-producto">
-					<span>3000,90 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero" class="imagen-articulo"></div>
-				<span class="nombre-producto">Asus ROG CROSSHAIR VIII DARK HERO</span>
-				<div class="precio-producto">
-					<span>249,95 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X" class="imagen-articulo"></div>
-				<span class="nombre-producto">AMD Ryzen 9 5900X</span>
-				<div class="precio-producto">
-					<span>299,01 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2" class="imagen-articulo"></div>
-				<span class="nombre-producto">Corsair K70 MK2 Cherry MX Blue</span>
-				<div class="precio-producto">
-					<span>70,00 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB" class="imagen-articulo"></div>
-				<span class="nombre-producto">Crucial DDR4 2400 16 GB</span>
-				<div class="precio-producto">
-					<span>140,84 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga" class="imagen-articulo"></div>
-				<span class="nombre-producto">Astro A50 + Estación carga</span>
-				<div class="precio-producto">
-					<span>550,50 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5" class="imagen-articulo"></div>
-				<span class="nombre-producto">PlayStation 5</span>
-				<div class="precio-producto">
-					<span>200,05 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-			<article class="articulo-tienda">
-				<div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper" class="imagen-articulo"></div>
-				<span class="nombre-producto">Razer Viper</span>
-				<div class="precio-producto">
-					<span>69,99 €</span>
-					<button class="añadir-carrito boton-secundario">Añadir al carrito</button>
-				</div>
-			</article>
-		</div>
-	</section>
-	<section id="carrito" class="oculto">
-		<span id="carrito-enlace"></span> <!-- Vacio ya que solo sirve de enlace -->
-		<h3>Carrito</h3>
-		<table>
-			<thead>
-				<tr>
-					<th>Cantidad</th>
-					<th colspan="2">Producto</th>
-					<th>Precio / Unidad</th>
-					<th>Precio</th>
-					<th>Borrar</th>
-				</tr>
-			</thead>
-			<tbody id="objetos-carrito"></tbody>
-			<tfoot>
-				<tr>
-					<th>Total: </th>
-					<td class="precio-total" colspan="5">0, 00€</td>
-				</tr>
-			</tfoot>
-		</table>
-		<button class="comprar boton-primario">Comprar</button>
-	</section>
-</main>
+      <h2>Productos destacados</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <a href="">
+              <img class="d-block w-100" id="msi" src="img/productos/MSI-3090.jpg" alt="Gráfica 3090">
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a href="">
+              <img class="d-block w-100" id="amd" src="img/productos/AMD-Ryzen-5900X.jpg" alt="Second slide">
+            </a>
+          </div>
+          <div class="carousel-item">
+            <a href="">
+              <img class="d-block w-100" id="ps5" src="img/productos/PS5.webp" alt="Third slide">
+            </a>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <i class="bi bi-caret-left-fill"></i>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <i class="bi bi-caret-right-fill"></i>
+        </a>
+      </div>
+    </section>
+    <section id="productos">
+      <h2>Nuestro catálogo</h2>
+      <div class="galeria-productos">
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/MSI-3090.jpg" alt="Gráfica 3090" class="imagen-articulo">
+          </div>
+          <span class="nombre-producto">MSI GeForce RTX 3090 Ventus 3X</span>
+          <div class="precio-producto">
+            <span>3000,90 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/Asus-Dark-Hero.jpg" alt="Placa Dark Hero"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">Asus ROG CROSSHAIR VIII DARK HERO</span>
+          <div class="precio-producto">
+            <span>249,95 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/AMD-Ryzen-5900X.jpg" alt="AMD Ryzen 9 5900X"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">AMD Ryzen 9 5900X</span>
+          <div class="precio-producto">
+            <span>299,01 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/K70-RGB-MK2.jpg" alt="Corsair K70 MK2"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">Corsair K70 MK2 Cherry MX Blue</span>
+          <div class="precio-producto">
+            <span>70,00 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/Crucial-DDR4-16GB.jpg" alt="Crucial DDR4 16 GB"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">Crucial DDR4 2400 16 GB</span>
+          <div class="precio-producto">
+            <span>140,84 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/Astro-A50.jpg" alt="Astro A50 + Estación carga"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">Astro A50 + Estación carga</span>
+          <div class="precio-producto">
+            <span>550,50 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/PS5.webp" alt="PS5" class="imagen-articulo"></div>
+          <span class="nombre-producto">PlayStation 5</span>
+          <div class="precio-producto">
+            <span>200,05 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+        <article class="articulo-tienda">
+          <div class="marco-producto"><img src="img/productos/Razer-Viper.jpg" alt="Razer Viper"
+              class="imagen-articulo"></div>
+          <span class="nombre-producto">Razer Viper</span>
+          <div class="precio-producto">
+            <span>69,99 €</span>
+            <button class="añadir-carrito boton-secundario">Añadir al carrito</button>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section id="carrito" class="oculto">
+      <span id="carrito-enlace"></span> <!-- Vacio ya que solo sirve de enlace -->
+      <h3>Carrito</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Cantidad</th>
+            <th colspan="2">Producto</th>
+            <th>Precio / Unidad</th>
+            <th>Precio</th>
+            <th>Borrar</th>
+          </tr>
+        </thead>
+        <tbody id="objetos-carrito"></tbody>
+        <tfoot>
+          <tr>
+            <th>Total: </th>
+            <td class="precio-total" colspan="5">0, 00€</td>
+          </tr>
+        </tfoot>
+      </table>
+      <button class="comprar boton-primario">Comprar</button>
+    </section>
+  </main>
 
-<footer>
-	<div>
-		<h5>&COPY; Todos los derechos reservados a PcAczezorios - 2022</h5>
-	</div>
-</footer>
-<script src="js/login.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-  crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-  integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-  crossorigin="anonymous"></script>
+  <footer>
+    <div>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons"
+          style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Este obra está
+      bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons
+        Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
+    </div>
+  </footer>
+  <script src="js/login.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
