--- a/contacto.html
+++ b/contacto.html
@@ -16,167 +16,172 @@
   <link rel="stylesheet" href="css/historia.css">
   <link rel="stylesheet" href="css/contacto.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-0BTQQE7J80');
-</script>
+    gtag('config', 'G-0BTQQE7J80');
+  </script>
 </head>
 
 <body>
 
-    <header>
-      <div>
-        <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'"
-          alt="PcAczezorios" title="PcAczezorios">
-        <nav>
-          <ul>
-            <li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
-            <li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
-            <li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
-          </ul>
-        </nav>
-        <input type="search" placeholder="Búsqueda">
-      </div>
-      <!-- Login -->
-      <div id="div_login">
-        <button><i class="bi bi-person-circle"></i><span>Inicio de sesión</span></button>
+  <header>
+    <div>
+      <img src="img/logo-violeta.png" width="138" height="48" onclick="location.href='index.html'" alt="PcAczezorios"
+        title="PcAczezorios">
+      <nav>
+        <ul>
+          <li><a href="index.html"><i class="bi bi-house-door-fill"></i>Inicio</a></li>
+          <li><a href="contacto.html"><i class="bi bi-telephone-fill"></i>Contacto</a></li>
+          <li><a href="historia.html"><i class="bi bi-info-circle-fill"></i>Sobre Nosotros</a></li>
+        </ul>
+      </nav>
+      <input type="search" placeholder="Búsqueda">
+    </div>
+    <!-- Login -->
+    <div id="div_login">
+      <button><i class="bi bi-person-circle"></i><span>Inicio de sesión</span></button>
 
-        <!-- Barra oculta de Login -->
-        <!-- Unicamente a partir de aqui sería la parte útil -->
-        <div id="div_oculto_login" class="oculto">
-          <form action="#">
-            <fieldset>
-              <div>
-                <legend>Inicio de sesión</legend>
-              </div>
-              <div>
-                <label for="login_nick" class="labels">Usuario:</label>
-                <input type="text" name="login_nick">
-              </div>
-              <div>
-                <label for="login_password" class="labels">Contraseña:</label>
-                <input type="password" name="login_password">
-              </div>
-              <div>
-                <input type="submit" value="Acceder">
-                <button type="button">Registrarse</button>
-              </div>
-              <span class="oculto">* Usuario incorrecto</span>
-            </fieldset>
-          </form>
-        </div>
-      </div>
-    </header>
-    <main id="contacto">
-      <h1><img id="logo" src="img/logo-violeta-ventana.png" alt="logotipo">
-        Contacto</h1>
-
-      <div class="texto">
-        <form>
+      <!-- Barra oculta de Login -->
+      <!-- Unicamente a partir de aqui sería la parte útil -->
+      <div id="div_oculto_login" class="oculto">
+        <form action="#">
           <fieldset>
-              <table class="tabla-contacto">
-                  <tr>
-                      <td>
-                          <label>Nombre:  </label>
-                          <input type="text"/>
-                      </td>
-                      <td>
-                          <label>Apellidos:  </label>
-                          <input type="text"/>
-                      </td>
-                  </tr>
-
-                  <tr>
-                      <td colspan="2">
-                          <label>Email:  </label>
-                          <input type="email"/>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <label>Sexo:  </label>
-                      </td>
-                      <td>
-                          <input type="radio" id="hombre" name="sexo" value="hombre"/>
-                          <label for="hombre">Hombre: </label>
-                          <input type="radio" id="mujer" name="sexo" value="mujer"/>
-                          <label for="mujer">Mujer:</label>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <label>Motivo de contacto:  </label>
-                      </td>
-                      <td>
-                          <div>
-                              <label>Componentes </label>
-                              <input type="checkbox" name="Aficiones" value="Deporte"/>
-                          </div>
-                          <div>
-                              <label>Ordenadores portatiles </label>
-                              <input type="checkbox" name="Aficiones" value="Lectura"/>
-                          </div>
-                          <div>
-                              <label>Otros </label>
-                              <input type="checkbox" name="Aficiones" value="Cine"/>
-                          </div>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <label>Pais:  </label>
-                      </td>
-                      <td>
-                      <select name="Pais:" class="select-pais">
-                          <option selected value="España">España</option>
-                          <option value="Andorra">Andorra</option>
-                          <option value="Mozambique">Mozambique</option>
-                      </select>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <label>Subir una foto descriptiva:  </label>
-                      </td>
-                      <td>
-                          <input type="file"/>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <label>Descripcion sobre el motivo de contacto:</label>
-                      </td>
-                      <td>
-                          <textarea name="descripcion" cols="40" rows="5" placeholder="Escriba aqui sobre el motivo de contacto"></textarea>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td>
-                          <input type="reset" value="Resetear" name="Resetear" class="boton-terciario"/>
-                      </td>
-                      <td>
-                          <button type="submit" value="Enviar" class="boton-primario" onclick="alert('Formulario enviado correctamente! Espere nuestro mensaje');">Enviar</button>
-                      </td>
-                  </tr>
-              </table>
+            <div>
+              <legend>Inicio de sesión</legend>
+            </div>
+            <div>
+              <label for="login_nick" class="labels">Usuario:</label>
+              <input type="text" name="login_nick">
+            </div>
+            <div>
+              <label for="login_password" class="labels">Contraseña:</label>
+              <input type="password" name="login_password">
+            </div>
+            <div>
+              <input type="submit" value="Acceder">
+              <button type="button">Registrarse</button>
+            </div>
+            <span class="oculto">* Usuario incorrecto</span>
           </fieldset>
-      </form>
+        </form>
       </div>
-    </main>
+    </div>
+  </header>
+  <main id="contacto">
+    <h1><img id="logo" src="img/logo-violeta-ventana.png" alt="logotipo">
+      Contacto</h1>
+
+    <div class="texto">
+      <form>
+        <fieldset>
+          <table class="tabla-contacto">
+            <tr>
+              <td>
+                <label>Nombre: </label>
+                <input type="text" />
+              </td>
+              <td>
+                <label>Apellidos: </label>
+                <input type="text" />
+              </td>
+            </tr>
+
+            <tr>
+              <td colspan="2">
+                <label>Email: </label>
+                <input type="email" />
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label>Sexo: </label>
+              </td>
+              <td>
+                <input type="radio" id="hombre" name="sexo" value="hombre" />
+                <label for="hombre">Hombre: </label>
+                <input type="radio" id="mujer" name="sexo" value="mujer" />
+                <label for="mujer">Mujer:</label>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label>Motivo de contacto: </label>
+              </td>
+              <td>
+                <div>
+                  <label>Componentes </label>
+                  <input type="checkbox" name="Aficiones" value="Deporte" />
+                </div>
+                <div>
+                  <label>Ordenadores portatiles </label>
+                  <input type="checkbox" name="Aficiones" value="Lectura" />
+                </div>
+                <div>
+                  <label>Otros </label>
+                  <input type="checkbox" name="Aficiones" value="Cine" />
+                </div>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label>Pais: </label>
+              </td>
+              <td>
+                <select name="Pais:" class="select-pais">
+                  <option selected value="España">España</option>
+                  <option value="Andorra">Andorra</option>
+                  <option value="Mozambique">Mozambique</option>
+                </select>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label>Subir una foto descriptiva: </label>
+              </td>
+              <td>
+                <input type="file" />
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label>Descripcion sobre el motivo de contacto:</label>
+              </td>
+              <td>
+                <textarea name="descripcion" cols="40" rows="5"
+                  placeholder="Escriba aqui sobre el motivo de contacto"></textarea>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <input type="reset" value="Resetear" name="Resetear" class="boton-terciario" />
+              </td>
+              <td>
+                <button type="submit" value="Enviar" class="boton-primario"
+                  onclick="alert('Formulario enviado correctamente! Espere nuestro mensaje');">Enviar</button>
+              </td>
+            </tr>
+          </table>
+        </fieldset>
+      </form>
+    </div>
+  </main>
 
   <footer>
     <div>
-      <h5>&COPY; Todos los derechos reservados a PcAczezorios - 2022</h5>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons"
+          style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Este obra está
+      bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons
+        Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
     </div>
   </footer>
   <script src="js/login.js"></script>
@@ -190,4 +195,5 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
