--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <link rel="stylesheet" href="css/galeria.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/carrito.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8606342840428640"
-    crossorigin="anonymous"></script>
+  <script data-ad-client="ca-pub-8606342840428640" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script src="js/carrito.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BTQQE7J80"></script>
